kubernetes/clusters/kenobi/monitoring/grafana/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana

spec:
  template:
    spec:
      containers:
        - name: grafana
