kubernetes/clusters/kenobi/monitoring/grafana/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: grafana-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: grafana-feldman-tech-tls
      hosts:
        - grafana.feldman.tech
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: grafana

spec:
  hosts:
    - grafana
