kubernetes/clusters/kenobi/monitoring/grafana/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.feldman.tech`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: grafana-feldman-tech-tls
